--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/main.css">
-    <title>Covid-19 Tracker LatinDev</title>
+    <link rel="stylesheet" href="/static/css/main.css">
+
+    <title>Covid-19 tracker test</title>
 </head>
+  
 <body>
-    <h1>Proyecto de LatinDev (Tracker Covid-19)</h1>
-    {% block content %} {% endblock %}
+    
+    <!-- barra de menu -->
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="items">
+        
+        <a class="navbar-brand" href="">Home</a>
+            <a class="navbar-brand" href="">Acerca de</a>
+            <a class="navbar-brand" href="">Contacto</a>
+            <!-- Navbar content -->
+          </nav>
+          
+          <!-- titulo de la app -->
+          <div class="container-title">
+            
+            <h1 class="title-app">
+              Covid-19 Tracker 
+            </h1>
+            
+          </div>
+          {% block content %}
+          {% endblock %}
+
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </html>
